# Hroniki

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql  0002_photos.sql  0003_add_reminders.sql  0004_tags.sql  0005_identity.sql  0006_subscription.sql  0007_audit_log.sql  0008_fts5_search.sql  0009_reminders_v2.sql
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/account/: mod.rs  provider.rs  service.rs
src-tauri/src/application/: bootstrap.rs  chronology.rs  mod.rs  security.rs
src-tauri/src/audit/: mod.rs  models.rs  repository.rs  service.rs  subscriber.rs
src-tauri/src/commands/: backup.rs  categories.rs  demo_experience.rs  diagnostics.rs  entries.rs  info.rs  media.rs  mod.rs  objects.rs  onboarding.rs  pin.rs  reminder.rs  reminders.rs  search.rs
src-tauri/src/diagnostics/: mod.rs  panic_handler.rs
src-tauri/src/domain/: error.rs  ids.rs  mod.rs  models.rs
src-tauri/src/events/: bus.rs  event.rs  mod.rs
src-tauri/src/features/: mod.rs  models.rs  provider.rs  repository.rs  service.rs
src-tauri/src/identity/: error.rs  mod.rs  models.rs  repository.rs  service.rs  settings.rs
src-tauri/src/media/: mod.rs  service.rs
src-tauri/src/platform/: capabilities.rs  context.rs  lifecycle.rs  mod.rs  notifications.rs  permissions.rs  schedule.rs  session.rs  storage.rs  tests.rs
src-tauri/src/reminder/: commands.rs  mod.rs  models.rs  provider.rs  repository.rs  scheduler.rs  service.rs  subscriber.rs  (+2 more)
(+171 files in other folders)
